--- a/src/app/investment-results/investment-results.component.html
+++ b/src/app/investment-results/investment-results.component.html
@@ -1,4 +1,4 @@
-@if (!results) {
+@if (!results()) {
 <p class="center">
   No results available. Please enter some values and press "Calculate"
 </p>
